[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/tarot.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Assets/fool/fool.tres" type="Material" id=2]
[ext_resource path="res://Assets/fool/texture card back.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/controller.gd" type="Script" id=4]
[ext_resource path="res://Assets/The Happy Giraffe Demo.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/CabinSketch-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GodotRetro/Screen Shaders/NTSC.shader" type="Shader" id=7]
[ext_resource path="res://Particles/textures/part_c2.png" type="Texture" id=8]
[ext_resource path="res://Particles/textures/sprites_16.png" type="Texture" id=9]
[ext_resource path="res://Scenes/tarotclocknormal.tres" type="Material" id=10]
[ext_resource path="res://Particles/decals/decal.shader" type="Shader" id=11]
[ext_resource path="res://Scenes/gridnormal.tres" type="Material" id=12]

[sub_resource type="SpatialMaterial" id=286]
albedo_texture = ExtResource( 3 )

[sub_resource type="ArrayMesh" id=303]
surfaces/0 = {
"aabb": AABB( -3.07143, -4.5622, -0.100504, 6.00702, 9.1502, 0.201007 ),
"array_data": PoolByteArray( 51, 18, 43, 192, 119, 207, 146, 64, 234, 88, 198, 61, 248, 116, 130, 1, 200, 58, 3, 48, 51, 18, 43, 192, 119, 207, 146, 64, 100, 88, 198, 189, 248, 116, 130, 1, 41, 59, 4, 48, 121, 114, 35, 64, 237, 208, 146, 64, 119, 224, 197, 61, 8, 116, 130, 126, 200, 58, 231, 55, 121, 114, 35, 64, 237, 208, 146, 64, 241, 223, 197, 189, 8, 116, 130, 126, 41, 59, 231, 55, 152, 196, 40, 192, 132, 253, 145, 192, 173, 176, 197, 189, 246, 140, 1, 63, 193, 46, 37, 56, 152, 196, 40, 192, 132, 253, 145, 192, 39, 176, 197, 61, 246, 140, 1, 63, 192, 48, 37, 56, 212, 164, 31, 64, 238, 251, 145, 192, 205, 52, 198, 189, 8, 140, 2, 63, 193, 46, 5, 59, 212, 164, 31, 64, 238, 251, 145, 192, 71, 52, 198, 61, 8, 140, 2, 63, 192, 48, 5, 59, 187, 194, 59, 64, 14, 114, 127, 192, 235, 212, 205, 189, 115, 11, 132, 126, 41, 59, 54, 59, 187, 194, 59, 64, 14, 114, 127, 192, 101, 212, 205, 61, 115, 11, 132, 126, 200, 58, 54, 59, 160, 224, 59, 64, 212, 159, 133, 64, 113, 230, 201, 189, 126, 0, 131, 126, 41, 59, 42, 56, 160, 224, 59, 64, 212, 159, 133, 64, 247, 230, 201, 61, 126, 0, 131, 126, 200, 58, 42, 56, 235, 96, 68, 192, 14, 114, 127, 192, 101, 212, 205, 61, 141, 11, 0, 60, 192, 48, 224, 55, 235, 96, 68, 192, 14, 114, 127, 192, 235, 212, 205, 189, 141, 11, 0, 60, 193, 46, 224, 55, 92, 146, 68, 192, 137, 176, 133, 64, 214, 18, 199, 61, 138, 6, 0, 61, 192, 48, 190, 47, 92, 146, 68, 192, 137, 176, 133, 64, 80, 18, 199, 189, 138, 6, 0, 61, 193, 46, 191, 47, 173, 107, 56, 192, 250, 7, 143, 64, 81, 232, 202, 61, 188, 58, 254, 62, 192, 48, 2, 47, 16, 147, 62, 192, 10, 107, 139, 64, 144, 6, 205, 61, 169, 39, 255, 61, 192, 48, 96, 47, 173, 107, 56, 192, 250, 7, 143, 64, 204, 231, 202, 189, 188, 58, 254, 62, 193, 46, 4, 47, 16, 147, 62, 192, 11, 107, 139, 64, 10, 6, 205, 189, 181, 51, 254, 61, 193, 46, 98, 47, 173, 107, 56, 192, 250, 7, 143, 64, 81, 232, 202, 61, 210, 80, 130, 1, 200, 58, 16, 47, 173, 107, 56, 192, 250, 7, 143, 64, 204, 231, 202, 189, 210, 80, 130, 1, 41, 59, 17, 47, 239, 79, 47, 64, 210, 113, 143, 64, 139, 62, 204, 61, 46, 78, 130, 126, 200, 58, 18, 56, 239, 79, 47, 64, 210, 113, 143, 64, 5, 62, 204, 189, 46, 78, 130, 126, 41, 59, 18, 56, 29, 2, 56, 64, 168, 218, 138, 64, 228, 212, 201, 61, 77, 49, 131, 126, 200, 58, 30, 56, 29, 2, 56, 64, 168, 218, 138, 64, 94, 212, 201, 189, 89, 35, 131, 126, 41, 59, 30, 56, 91, 218, 53, 192, 18, 51, 142, 192, 29, 218, 203, 61, 208, 178, 1, 62, 192, 48, 7, 56, 91, 218, 53, 192, 18, 51, 142, 192, 163, 218, 203, 189, 208, 178, 1, 62, 193, 46, 7, 56, 220, 5, 67, 192, 154, 151, 132, 192, 163, 30, 203, 61, 162, 226, 2, 59, 192, 48, 236, 55, 220, 5, 67, 192, 154, 151, 132, 192, 41, 31, 203, 189, 144, 242, 0, 59, 193, 46, 236, 55, 95, 20, 46, 64, 23, 221, 141, 192, 34, 30, 204, 61, 64, 194, 125, 126, 200, 58, 78, 59, 119, 20, 53, 64, 34, 71, 138, 192, 63, 218, 202, 61, 87, 217, 124, 126, 200, 58, 66, 59, 95, 20, 46, 64, 23, 221, 141, 192, 167, 30, 204, 189, 64, 194, 125, 126, 41, 59, 78, 59, 119, 20, 53, 64, 34, 71, 138, 192, 197, 218, 202, 189, 75, 205, 124, 126, 41, 59, 66, 59, 95, 20, 46, 64, 23, 221, 141, 192, 34, 30, 204, 61, 46, 176, 1, 64, 192, 48, 35, 59, 95, 20, 46, 64, 23, 221, 141, 192, 167, 30, 204, 189, 46, 176, 1, 64, 193, 46, 35, 59, 239, 79, 47, 64, 210, 113, 143, 64, 139, 62, 204, 61, 0, 0, 127, 64, 0, 59, 65, 45, 173, 107, 56, 192, 250, 7, 143, 64, 81, 232, 202, 61, 0, 0, 127, 64, 17, 48, 65, 45, 121, 114, 35, 64, 237, 208, 146, 64, 119, 224, 197, 61, 0, 0, 127, 64, 213, 58, 173, 44, 51, 18, 43, 192, 119, 207, 146, 64, 234, 88, 198, 61, 0, 0, 127, 64, 193, 48, 173, 44, 29, 2, 56, 64, 168, 218, 138, 64, 228, 212, 201, 61, 0, 0, 127, 64, 29, 59, 243, 45, 16, 147, 62, 192, 10, 107, 139, 64, 144, 6, 205, 61, 0, 0, 127, 64, 78, 47, 243, 45, 187, 194, 59, 64, 14, 114, 127, 192, 101, 212, 205, 61, 0, 0, 127, 64, 44, 59, 64, 59, 235, 96, 68, 192, 14, 114, 127, 192, 101, 212, 205, 61, 0, 0, 127, 64, 170, 46, 64, 59, 160, 224, 59, 64, 212, 159, 133, 64, 247, 230, 201, 61, 0, 0, 127, 64, 44, 59, 206, 46, 92, 146, 68, 192, 137, 176, 133, 64, 214, 18, 199, 61, 0, 0, 127, 64, 170, 46, 206, 46, 91, 218, 53, 192, 18, 51, 142, 192, 29, 218, 203, 61, 0, 0, 127, 64, 44, 48, 143, 59, 95, 20, 46, 64, 23, 221, 141, 192, 34, 30, 204, 61, 0, 0, 127, 64, 247, 58, 143, 59, 152, 196, 40, 192, 132, 253, 145, 192, 39, 176, 197, 61, 0, 0, 127, 64, 234, 48, 164, 59, 212, 164, 31, 64, 238, 251, 145, 192, 71, 52, 198, 61, 0, 0, 127, 64, 197, 58, 164, 59, 77, 10, 58, 64, 123, 38, 133, 192, 183, 241, 203, 61, 0, 0, 127, 64, 38, 59, 92, 59, 220, 5, 67, 192, 154, 151, 132, 192, 163, 30, 203, 61, 0, 0, 127, 64, 218, 46, 92, 59, 239, 79, 47, 64, 210, 113, 143, 64, 139, 62, 204, 61, 64, 62, 131, 126, 200, 58, 18, 56, 239, 79, 47, 64, 210, 113, 143, 64, 5, 62, 204, 189, 64, 62, 131, 126, 41, 59, 18, 56, 119, 20, 53, 64, 34, 71, 138, 192, 63, 218, 202, 61, 0, 0, 127, 64, 20, 59, 120, 59, 116, 68, 61, 192, 123, 56, 138, 192, 126, 81, 204, 61, 0, 0, 127, 64, 122, 47, 120, 59, 77, 10, 58, 64, 123, 38, 133, 192, 183, 241, 203, 61, 114, 244, 123, 126, 200, 58, 60, 59, 77, 10, 58, 64, 123, 38, 133, 192, 61, 242, 203, 189, 96, 228, 123, 126, 41, 59, 60, 59, 116, 68, 61, 192, 123, 56, 138, 192, 126, 81, 204, 61, 181, 205, 3, 61, 192, 48, 247, 55, 91, 218, 53, 192, 18, 51, 142, 192, 29, 218, 203, 61, 190, 196, 2, 62, 192, 48, 7, 56, 116, 68, 61, 192, 123, 56, 138, 192, 4, 82, 204, 189, 169, 217, 2, 60, 193, 46, 248, 55, 91, 218, 53, 192, 18, 51, 142, 192, 163, 218, 203, 189, 190, 196, 2, 62, 193, 46, 7, 56, 220, 5, 67, 192, 154, 151, 132, 192, 41, 31, 203, 189, 127, 127, 127, 192, 248, 46, 86, 59, 77, 10, 58, 64, 123, 38, 133, 192, 61, 242, 203, 189, 127, 127, 127, 192, 31, 59, 86, 59, 235, 96, 68, 192, 14, 114, 127, 192, 235, 212, 205, 189, 127, 127, 127, 192, 201, 46, 58, 59, 187, 194, 59, 64, 14, 114, 127, 192, 235, 212, 205, 189, 127, 127, 127, 192, 37, 59, 58, 59, 212, 164, 31, 64, 238, 251, 145, 192, 205, 52, 198, 189, 127, 127, 127, 192, 190, 58, 156, 59, 95, 20, 46, 64, 23, 221, 141, 192, 167, 30, 204, 189, 127, 127, 127, 192, 240, 58, 136, 59, 152, 196, 40, 192, 132, 253, 145, 192, 173, 176, 197, 189, 127, 127, 127, 192, 246, 48, 156, 59, 91, 218, 53, 192, 18, 51, 142, 192, 163, 218, 203, 189, 127, 127, 127, 192, 58, 48, 136, 59, 16, 147, 62, 192, 11, 107, 139, 64, 10, 6, 205, 189, 127, 127, 127, 192, 107, 47, 74, 46, 29, 2, 56, 64, 168, 218, 138, 64, 94, 212, 201, 189, 127, 127, 127, 192, 22, 59, 74, 46, 173, 107, 56, 192, 250, 7, 143, 64, 204, 231, 202, 189, 127, 127, 127, 192, 31, 48, 153, 45, 239, 79, 47, 64, 210, 113, 143, 64, 5, 62, 204, 189, 127, 127, 127, 192, 249, 58, 153, 45, 51, 18, 43, 192, 119, 207, 146, 64, 100, 88, 198, 189, 127, 127, 127, 192, 206, 48, 7, 45, 121, 114, 35, 64, 237, 208, 146, 64, 241, 223, 197, 189, 127, 127, 127, 192, 207, 58, 7, 45, 92, 146, 68, 192, 137, 176, 133, 64, 80, 18, 199, 189, 127, 127, 127, 192, 201, 46, 34, 47, 160, 224, 59, 64, 212, 159, 133, 64, 113, 230, 201, 189, 127, 127, 127, 192, 37, 59, 34, 47, 116, 68, 61, 192, 123, 56, 138, 192, 4, 82, 204, 189, 127, 127, 127, 192, 151, 47, 113, 59, 119, 20, 53, 64, 34, 71, 138, 192, 197, 218, 202, 189, 127, 127, 127, 192, 13, 59, 113, 59 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 8, 0, 10, 0, 9, 0, 10, 0, 11, 0, 9, 0, 12, 0, 14, 0, 13, 0, 14, 0, 15, 0, 13, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 0, 0, 1, 0, 20, 0, 1, 0, 21, 0, 20, 0, 22, 0, 23, 0, 2, 0, 23, 0, 3, 0, 2, 0, 11, 0, 10, 0, 24, 0, 10, 0, 25, 0, 24, 0, 26, 0, 27, 0, 5, 0, 27, 0, 4, 0, 5, 0, 12, 0, 13, 0, 28, 0, 13, 0, 29, 0, 28, 0, 30, 0, 32, 0, 31, 0, 32, 0, 33, 0, 31, 0, 7, 0, 6, 0, 34, 0, 6, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 38, 0, 39, 0, 37, 0, 40, 0, 36, 0, 41, 0, 36, 0, 37, 0, 41, 0, 42, 0, 44, 0, 43, 0, 44, 0, 45, 0, 43, 0, 46, 0, 48, 0, 47, 0, 48, 0, 49, 0, 47, 0, 42, 0, 43, 0, 50, 0, 43, 0, 51, 0, 50, 0, 44, 0, 40, 0, 45, 0, 40, 0, 41, 0, 45, 0, 24, 0, 25, 0, 52, 0, 25, 0, 53, 0, 52, 0, 17, 0, 19, 0, 14, 0, 19, 0, 15, 0, 14, 0, 54, 0, 55, 0, 47, 0, 55, 0, 46, 0, 47, 0, 31, 0, 33, 0, 56, 0, 33, 0, 57, 0, 56, 0, 58, 0, 60, 0, 59, 0, 60, 0, 61, 0, 59, 0, 56, 0, 57, 0, 9, 0, 57, 0, 8, 0, 9, 0, 50, 0, 51, 0, 54, 0, 51, 0, 55, 0, 54, 0, 28, 0, 29, 0, 58, 0, 29, 0, 60, 0, 58, 0, 62, 0, 64, 0, 63, 0, 64, 0, 65, 0, 63, 0, 66, 0, 68, 0, 67, 0, 68, 0, 69, 0, 67, 0, 70, 0, 72, 0, 71, 0, 72, 0, 73, 0, 71, 0, 72, 0, 74, 0, 73, 0, 74, 0, 75, 0, 73, 0, 64, 0, 76, 0, 65, 0, 76, 0, 77, 0, 65, 0, 76, 0, 70, 0, 77, 0, 70, 0, 71, 0, 77, 0, 69, 0, 78, 0, 67, 0, 78, 0, 79, 0, 67, 0, 78, 0, 62, 0, 79, 0, 62, 0, 63, 0, 79, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 204,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 80
}

[sub_resource type="SpatialMaterial" id=304]
emission_enabled = true
emission = Color( 0.533333, 0.960784, 0.513726, 1 )
emission_energy = 3.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Environment" id=287]
dof_blur_near_enabled = true
dof_blur_near_distance = 37.87
dof_blur_near_transition = 0.35
dof_blur_near_amount = 0.06
glow_enabled = true

[sub_resource type="Animation" id=289]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("tarot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.001, 0.014, -0.149 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tarot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -4.736, 17.223, 0 ) ]
}

[sub_resource type="Animation" id=290]
resource_name = "changearcana"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("tarot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.133972, 0.25 ),
"update": 0,
"values": [ Vector3( 0.001, 0.014, -0.149 ), Vector3( 0.001, 0.014, -0.149 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tarot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.133972, 0.25 ),
"update": 0,
"values": [ Vector3( -4.736, 17.223, 0 ), Vector3( -4.736, 377.223, 0 ) ]
}

[sub_resource type="Animation" id=291]
resource_name = "changearcanaback"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("tarot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.25, 0.133972 ),
"update": 0,
"values": [ Vector3( 0.001, 0.014, -0.149 ), Vector3( 0.001, 0.014, -0.149 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tarot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.25, 0.133972 ),
"update": 0,
"values": [ Vector3( -4.736, 377.223, 0 ), Vector3( -4.736, 17.223, 0 ) ]
}

[sub_resource type="Animation" id=288]
resource_name = "float"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tarot:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.757856, 0.757856 ),
"update": 0,
"values": [ Vector3( 0.001, 0.014, -0.149 ), Vector3( 0.001, 0.025, -0.149 ) ]
}

[sub_resource type="ShaderMaterial" id=305]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/emulate_lighting = true
shader_param/brightness = -0.02
shader_param/iFrame = 0
shader_param/iTime = 2.651
shader_param/ttlive = -1.0
shader_param/material_id = -1
shader_param/depth_step = 0.001
shader_param/expl = ExtResource( 8 )
shader_param/sprites = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=307]
next_pass = SubResource( 305 )
albedo_color = Color( 0.415686, 0.141176, 0.913725, 1 )

[sub_resource type="CubeMesh" id=306]

[sub_resource type="DynamicFont" id=292]
size = 53
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=301]
size = 23
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=299]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=302]
size = 37
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=298]
size = 29
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=296]
size = 33
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=297]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=300]
shader = ExtResource( 7 )
shader_param/blur_amount = 0.0
shader_param/signal_quality = 0.0
shader_param/bottom_strenth = 1.651

[node name="Control" type="Control"]
margin_right = 1024.0
margin_bottom = 576.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 10 )
margin_right = 1024.0
margin_bottom = 576.0

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.529412 )
material = ExtResource( 12 )
margin_left = 1031.0
margin_top = -8.0
margin_right = 1483.0
margin_bottom = 736.0
rect_rotation = 37.9

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -259.0
margin_right = 518.0
margin_bottom = 259.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 518, 518 )
transparent_bg = true
handle_input_locally = false
msaa = 1
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.215207 )
fov = 90.8

[node name="tarot" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 0.0454908, -0.00116431, 0.0140536, 0, 0.0474638, 0.00393226, -0.0141018, -0.00375594, 0.0453355, 0.001, 0.014, -0.149 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 2 )
material/1 = SubResource( 286 )

[node name="MeshInstance" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial/tarot"]
visible = false
mesh = SubResource( 303 )
material/0 = SubResource( 304 )

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 0.965099, -0.119789, 0.232884, 0, 0.889257, 0.457408, -0.261886, -0.441444, 0.858221, 0, 0, 0 )
light_color = Color( 0.290196, 0.407843, 0.521569, 1 )
light_energy = 6.131

[node name="WorldEnvironment" type="WorldEnvironment" parent="ViewportContainer/Viewport/Spatial"]
environment = SubResource( 287 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ViewportContainer/Viewport/Spatial"]
anims/RESET = SubResource( 289 )
anims/changearcana = SubResource( 290 )
anims/changearcanaback = SubResource( 291 )
anims/float = SubResource( 288 )

[node name="decal_demo" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 0.351137, 0.283726, 0.207085, -0.312154, 0.386318, 0, -0.161074, -0.130152, 0.451439, -0.0205458, 0.0152487, -0.0259309 )
material_override = SubResource( 307 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 306 )

[node name="ButtonGo" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_top = 450.0
margin_right = -154.0
margin_bottom = 511.0
rect_scale = Vector2( 1.85682, 1.85682 )
mouse_filter = 2
custom_colors/default_color = Color( 0.741176, 0.670588, 1, 1 )
custom_fonts/normal_font = SubResource( 292 )
bbcode_enabled = true
bbcode_text = "[wave]>"
text = ">"

[node name="Play" type="RichTextLabel" parent="."]
anchor_left = 0.489
anchor_top = 0.924
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -82.224
margin_right = 58.0
margin_bottom = 3.77606
rect_scale = Vector2( 1.85682, 1.85682 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0.478431, 1, 1 )
custom_fonts/normal_font = SubResource( 301 )
bbcode_enabled = true
bbcode_text = "[wave][center]Sākt Spēli"
text = "Sākt Spēli"
fit_content_height = true
scroll_active = false

[node name="ButtonPlus" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = -127.0
margin_right = 57.0001
margin_bottom = 230.0
rect_scale = Vector2( 1.85682, 1.85682 )
mouse_filter = 2
custom_colors/default_color = Color( 0.670588, 1, 0.721569, 1 )
custom_fonts/normal_font = SubResource( 299 )
bbcode_enabled = true
bbcode_text = "[wave][center][center]+"
text = "+"
fit_content_height = true
scroll_active = false

[node name="ButtonMinus" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = -127.0
margin_right = 57.0001
margin_bottom = 230.0
rect_scale = Vector2( 1.85682, 1.85682 )
mouse_filter = 2
custom_colors/default_color = Color( 1, 0.670588, 0.670588, 1 )
custom_fonts/normal_font = SubResource( 299 )
bbcode_enabled = true
bbcode_text = "[wave][center][center]-"
text = "-"
fit_content_height = true
scroll_active = false

[node name="ButtonBack" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -432.0
margin_top = 450.0
margin_right = -356.0
margin_bottom = 511.0
rect_scale = Vector2( 1.85682, 1.85682 )
mouse_filter = 2
custom_colors/default_color = Color( 0.741176, 0.670588, 1, 1 )
custom_fonts/normal_font = SubResource( 292 )
bbcode_enabled = true
bbcode_text = "[right][wave]<"
text = "<"

[node name="Title2" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.074
anchor_right = 0.5
anchor_bottom = 0.07
margin_left = -719.0
margin_top = 14.624
margin_right = -121.0
margin_bottom = 167.624
custom_colors/default_color = Color( 0.639216, 0.215686, 0.972549, 1 )
custom_fonts/normal_font = SubResource( 302 )
bbcode_enabled = true
bbcode_text = "[center][center][wave]< Atpakaļ"
text = "< Atpakaļ"

[node name="Forward" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 258.0
margin_top = 450.0
margin_right = 364.0
margin_bottom = 543.0
text = "change arcana"

[node name="Add" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 504.0
margin_top = 388.0
margin_right = 610.0
margin_bottom = 481.0
text = "change arcana"

[node name="PlayB" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 446.0
margin_top = 482.0
margin_right = 683.0
margin_bottom = 545.0
text = "change arcana"

[node name="Remove" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 504.0
margin_top = 388.0
margin_right = 610.0
margin_bottom = 481.0
text = "change arcana"

[node name="Backward" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 126.0
margin_top = 450.0
margin_right = 232.0
margin_bottom = 543.0
text = "change arcana"

[node name="BackToMenu" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 7.0
margin_top = -4.0
margin_right = 192.0
margin_bottom = 60.0
text = "change arcana"

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.074
anchor_right = 0.5
anchor_bottom = 0.07
margin_left = -299.0
margin_right = 299.0
margin_bottom = 153.0
custom_colors/default_color = Color( 0.215686, 0.6, 0.972549, 1 )
custom_fonts/normal_font = SubResource( 292 )
bbcode_enabled = true
bbcode_text = "[center][center][wave]Pielāgota Spēle"
text = "Pielāgota Spēle"

[node name="Choose" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.039
anchor_right = 0.5
anchor_bottom = 0.039
margin_left = -290.0
margin_top = 22.536
margin_right = 308.0
margin_bottom = 175.536
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 298 )
bbcode_enabled = true
bbcode_text = "[center][center][wave]Izvēlies 6 uzdevumus!"
text = "Izvēlies 6 uzdevumus!"

[node name="GameTitle" type="Label" parent="."]
margin_left = 360.0
margin_top = 153.0
margin_right = 758.0
margin_bottom = 296.0
custom_colors/font_color = Color( 0.0392157, 0.423529, 0.713726, 1 )
custom_fonts/font = SubResource( 296 )
text = "aeaeaeaeaeaea"

[node name="GameTitle2" type="Label" parent="."]
margin_left = 913.0
margin_top = 347.259
margin_right = 1053.0
margin_bottom = 490.259
custom_colors/font_color = Color( 0.0392157, 0.423529, 0.713726, 1 )
custom_fonts/font = SubResource( 296 )
text = "Spēles:

"

[node name="GameDesc" type="Label" parent="."]
margin_left = 373.0
margin_top = 192.0
margin_right = 771.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 297 )
text = "aeaeaeaeaeaeaaeaeaeaeaeaeaeaeaeaeaeaeaeoeaioifoewifowekeigreeigheruighredugrtuihrdguhjigriuhrdgirdjdiedrehgiuergeiurgjeroigjeoirgjeriojgjogegjoegjegjegjerjgejigroejigjogierjgigjroeroirjgejoigrjigerojgojijergerjiogrejoirgejregjoigrjeojoigrejregjiregojijorgjioreijogrejiorgejiojiorgijrgejiorgeijgrjioregjiorgejiogrejiogrejiogrejoigrejoirgejoigrejoigrejoi"
autowrap = true

[node name="ChosenGames" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.917
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -398.0
margin_top = -145.0
custom_fonts/font = SubResource( 297 )
text = "\"Liepāja - kā pa notīm\"
\"Liepāja - kā pa notīm\"
\"Liepāja - kā pa notīm\"
\"Liepāja - kā pa notīm\"
\"Liepāja - kā pa notīm\"
\"Liepāja - kā pa notīm\""
align = 2
autowrap = true

[node name="ColorRect3" type="ColorRect" parent="."]
material = SubResource( 300 )
margin_right = 1024.0
margin_bottom = 576.0
mouse_filter = 2

[connection signal="animation_finished" from="ViewportContainer/Viewport/Spatial/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_up" from="Forward" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Forward" to="." method="_on_Forward_mouse_entered"]
[connection signal="mouse_exited" from="Forward" to="." method="_on_Forward_mouse_exited"]
[connection signal="button_up" from="Add" to="." method="_on_Add_button_up"]
[connection signal="mouse_entered" from="Add" to="." method="_on_Add_mouse_entered"]
[connection signal="mouse_exited" from="Add" to="." method="_on_Add_mouse_exited"]
[connection signal="button_up" from="PlayB" to="." method="_on_PlayB_button_up"]
[connection signal="mouse_entered" from="PlayB" to="." method="_on_PlayB_mouse_entered"]
[connection signal="mouse_exited" from="PlayB" to="." method="_on_PlayB_mouse_exited"]
[connection signal="button_up" from="Remove" to="." method="_on_Remove_button_up"]
[connection signal="mouse_entered" from="Remove" to="." method="_on_Remove_mouse_entered"]
[connection signal="mouse_exited" from="Remove" to="." method="_on_Remove_mouse_exited"]
[connection signal="button_up" from="Backward" to="." method="_on_Backward_button_up"]
[connection signal="mouse_entered" from="Backward" to="." method="_on_Backward_mouse_entered"]
[connection signal="mouse_exited" from="Backward" to="." method="_on_Backward_mouse_exited"]
[connection signal="button_up" from="BackToMenu" to="." method="_on_BackToMenu_button_up"]
[connection signal="mouse_entered" from="BackToMenu" to="." method="_on_BackToMenu_mouse_entered"]
[connection signal="mouse_exited" from="BackToMenu" to="." method="_on_BackToMenu_mouse_exited"]
